<resources>
    <string name="app_name">Dolax</string>
    <string name="text_under_development">UNDER DEVELOPMENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_bank">Online</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_success">Created successfully</string>
    <string name="create_fail">Created failed</string>

    <string name="login">LOGIN</string>
    <string name="dialog_login">Logging in</string>

    <string name="btn_send">Send</string>
    <string name="btn_create_account">Create Account</string>

    <!-- TODO: Should get this message from server -->
    <string name="toast_login_fail">Something went wrong!</string>
    <string name="toast_login_success">Login success</string>
    <string name="toast_register_success">Welcome to Dolax!</string>
    <string name="toast_get_payment_fail">Fail to get payments</string>
    <string name="toast_st_went_wrong">Something went wrong!</string>

    <string name="dialog_loading_payment">Loading payment...</string>

    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>

    <string name="hint_edt_chat">Say something!</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Dolax Name</string>
    <string name="hint_reenter_password">Re-enter Password</string>

    <string name="txt_not_member">Not a member? Signup here.</string>
    <string name="txt_active">Active now</string>
    <string name="txt_off_line">off line</string>
    <string name="txt_member_already">Already a member? Login</string>
    <string name="txt_under_development">Under Development</string>

    <string name="title_newfeed">New Feed</string>
    <string name="title_online">Online</string>
    <string name="title_chat">Chat</string>
    <string name="title_livestream">Live Stream</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>

    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d seconds ago</string>
    <string name="time_ago_full_minute">%1$d minute ago</string>
    <string name="time_ago_full_minutes">%1$d minutes ago</string>
    <string name="time_ago_full_hour">%1$d hour ago</string>
    <string name="time_ago_full_hours">%1$d hours ago</string>
    <string name="time_ago_full_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_full_days">%1$d days ago</string>
    <string name="time_ago_full_month">%1$d month ago</string>
    <string name="time_ago_full_months">%1$d months ago</string>

    <string name="time_ago_seconds">%1$d sec ago</string>
    <string name="time_ago_minute">%1$d min ago</string>
    <string name="time_ago_minutes">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_ago_hours">%1$d h ago</string>
    <string name="time_ago_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_days">%1$d d ago</string>
    <string name="time_ago_month">%1$d m ago</string>
    <string name="time_ago_months">%1$d m ago</string>
</resources>
