<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newfeed"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/title_newfeed" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_online"
        android:icon="@drawable/ic_card_giftcard_white_24dp"
        android:title="@string/title_online" />

    <item
        android:id="@+id/navigation_livestream"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_livestream" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>
